added ma sinh eku drawer

--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -3,6 +3,6 @@
 <script src="./javascripts/menu.js"></script>
 <script src="./javascripts/mapjs.js"></script>
 <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk6RC9a2oCziM9AVQBRpqpN0YlyWdkPj0&callback=initMap&libraries=&v=weekly"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk6RC9a2oCziM9AVQBRpqpN0YlyWdkPj0&callback=initMap&libraries=drawing&v=weekly"
   async
 ></script>
