--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -1,8 +1,9 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="./javascripts/menu.js"></script>
 <script src="./javascripts/mapjs.js"></script>
 <script
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk6RC9a2oCziM9AVQBRpqpN0YlyWdkPj0&callback=initMap&libraries=drawing&v=weekly"
   async
-></script>
+></script> -->
+<script type="text/javascript" src='./javascripts/demo.js'></script>
