--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 <% include partials/menu %>
 
 <div class="container-fluid bg-3 text-center">    
-  <h3><%= page %></h3><br>
+  <h3>Dashboard</h3><br>
 </div>
 
 <div id="map"></div>
