--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,12 +2,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="./stylesheets/style.css">
-<link rel="stylesheet" href="./stylesheets/mapstyle.css"> -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<link rel="stylesheet" href="./stylesheets/mapstyle.css">
 <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
 <link rel="stylesheet" type="text/css" href="./stylesheets/demo.css" />
 <link rel="stylesheet" type="text/css" href="styles.css" />
+<link rel="stylesheet" href="./stylesheets/style.css">
 <link rel="stylesheet" type="text/css" href="../template.css" />
 <script type="text/javascript" src='../test-credentials.js'></script>    
 <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
